Fix composer.json syntax error

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         },
         {
             "name": "Jacob Morris",
-            "jacob@mirk.co"
+            "email": "jacob@mirk.co"
         }
     ],
     "autoload": {
